--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "find-challenge",
+  "name": "make-5-dollars-a-day",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ctrl/react-adsense": "^1.3.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bemmer": "^1.1.0",
     "create-react-class": "^15.6.3",
+    "emailjs-com": "^2.6.4",
     "google-translate": "^3.0.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
